<resources>
    <string name="app_name">Vision Insurance</string>
    <string name="vision_insurance">Vision Insurance</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="let_s_get_you_amp_your_family_insured"><![CDATA[Let\'s get you & your family insured]]></string>
    <string name="profile">profile</string>
    <string name="life_insurance">life_insurance</string>
    <string name="lifeinsurance">lifeInsurance</string>
    <string name="insurance">insurance</string>
    <string name="lifeInsurance">Life Insurance</string>
    <string name="travel_insurance">Travel Insurance</string>
    <string name="auto_insurance">Auto Insurance</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="health_insurance">Health Insurance</string>
    <string name="retirement_plans">Retirement Plans</string>
    <string name="accidental_insurance">Accidental Insurance</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="visit_resulticks_com">Visit : Resulticks.com</string>
    <string name="home">Home</string>
    <string name="title_activity_dash_board2">DashBoard2</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_navigation_dashboard">NavigationDashboard</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vision_health_insurance_policies_ensure_that_you_and_your_loved_ones_get_read_more">Vision health insurance policies ensure that you and your loved ones get...</string>
    <string name="owning_a_vehicle_is_always_special_to_everyone_but_this_can_at_hard">Owning a vehicle is always special to everyone but this can at hard...</string>
    <string name="vision_travel_insurance_is_a_unique_product_meant_to_protect_you_while_travelling">Vision travel insurance is a unique product meant to protect you while travelling...</string>
    <string name="vision_life_insurance_is_the_right_option_to_live_your_life_to_the_fullest">Vision Life Insurance is the right option to live your life to the fullest....</string>
    <string name="vision_health_insurance_policies_ensure_that_you_and_your_loved_ones_get_r">Vision health insurance policies ensure that you and your loved ones get.</string>
</resources>