<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    tools:openDrawer="start"
    android:fitsSystemWindows="true"
    tools:context=".DashBoard">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="150dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/profile2"
                android:contentDescription="@string/profile" />

            <View
                android:layout_width="360dp"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:background="@color/light_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:text="@string/let_s_get_you_amp_your_family_insured"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="270dp">

                <ImageView
                    android:id="@+id/life"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/profile2"
                    android:contentDescription="@string/insurance" />

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/life"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/lifeInsurance"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="11sp" />

                <ImageView
                    android:id="@+id/travel"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="30dp"
                    android:layout_toEndOf="@+id/life"
                    android:src="@drawable/profile2"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/travel"
                    android:layout_marginStart="90dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/text1"
                    android:text="@string/travel_insurance"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="11sp" />

                <ImageView
                    android:id="@+id/auto"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="30dp"
                    android:layout_toEndOf="@+id/travel"
                    android:src="@drawable/profile2"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/auto"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/text2"
                    android:text="@string/auto_insurance"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="11sp" />

                <ImageView
                    android:id="@+id/health"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="30dp"
                    android:layout_below="@+id/text1"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/profile2"
                    android:contentDescription="@string/insurance" />

                <TextView
                    android:id="@+id/text4"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/health"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/health_insurance"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="11sp" />

                <ImageView
                    android:id="@+id/accidental"
                    android:layout_width="60dp"
                    android:layout_below="@+id/text2"
                    android:layout_height="60dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="30dp"
                    android:layout_toEndOf="@+id/health"
                    android:src="@drawable/profile2"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/text5"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/accidental"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/text4"
                    android:text="@string/accidental_insurance"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="11sp" />
                <ImageView
                    android:id="@+id/retire"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="30dp"
                    android:layout_toEndOf="@+id/accidental"
                    android:layout_below="@+id/text3"
                    android:src="@drawable/profile2"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/text6"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/retire"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/text5"
                    android:text="@string/retirement_plans"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="11sp" />

            </RelativeLayout>
        </LinearLayout>

    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/header_dashboard"
        app:menu="@menu/dashboard_menu" />


</androidx.drawerlayout.widget.DrawerLayout>